<resources>
    <string name="app_name">Instagram Light</string>
    <string name="welcome_text">Welcome to Instagram Light</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_screen_welcome_text">Login to Your Account</string>
    <string name="signup_screen_welcome_text">Create New Account</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_password">Enter Your Password</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="newImagePostDescription">this is image of new post</string>
    <string name="add_image_text">Add Image</string>
    <string name="add_post_caption_hint">Enter the caption for your post</string>
    <string name="addPostButtonText">Upload Post</string>
    <string name="sign_out_text">Sign Out</string>
    <string name="enter_your_comment">Enter your comment</string>
    <string name="comment_button_text">comment</string>
    <string name="post">Post</string>
    <string name="create_post_title">Create Post</string>
    <string name="like_button_in_comment_text">this image button is used to like the comment</string>
    <string name="view_all_comment_in_post_text">View all comments</string>
    <string name="reply_button_in_comment_text">Reply</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_search">Search</string>
    <string name="title_feels">Feels</string>
    <string name="title_activities">Activities</string>
    <string name="title_profile">Profile</string>
    <string name="edit_profile_text">Edit Profile</string>
    <string name="saved_button_text">Saved</string>
    <string name="done">Done</string>
    <string name="posts">Posts</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="follow">Follow</string>
    <string name="message">Message</string>
    <string name="search_icon_in_toolbar_description">Used to search the users</string>
    <string name="search_user_hint">Search User</string>
    <string name="chat">Chat</string>
    <string name="enter_message_hint">Message...</string>
</resources>