<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreatePostActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/addPostCardView"
        android:layout_width="390dp"
        android:layout_height="390dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/newImagePost"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/newImagePostDescription"/>

        <Button
            android:id="@+id/addImagePostButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_image_text"/>

    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/addPostCaption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/addPostCardView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/add_post_caption_hint"
        android:inputType="text"/>

    <Button
        android:id="@+id/add_post_button_create_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/addPostCaption"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:text="@string/addPostButtonText"/>

</androidx.constraintlayout.widget.ConstraintLayout>

</layout>