<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingVertical="16dp">

        <ImageView
            android:id="@+id/user_image_in_Post"
            android:layout_width="42dp"
            android:layout_height="42dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/user_name_in_post"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/user_image_in_Post"
            app:layout_constraintTop_toTopOf="@id/user_image_in_Post" />

        <TextView
            android:id="@+id/created_at_in_post"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/user_image_in_Post"
            app:layout_constraintTop_toBottomOf="@id/user_name_in_post" />

        <!--        <androidx.cardview.widget.CardView-->
        <!--            android:id="@+id/post_image_card_view_in_post"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginTop="12dp"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@id/user_image_in_Post"-->
        <!--            tools:layout_height="200dp"-->
        <!--            tools:layout_width="200dp">-->

        <FrameLayout
            android:id="@+id/post_image_container_in_post"
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_image_in_Post"
            tools:layout_height="200dp"
            tools:layout_width="200dp">

            <ImageView
                android:id="@+id/post_image_in_post"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

                <ImageView
                    android:id="@+id/big_like_button_in_post"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:src="@drawable/instagram_like_animation"
                    android:alpha="0"/>

        </FrameLayout>

    <!--        </androidx.cardview.widget.CardView>-->

    <xyz.hanks.library.bang.SmallBangView
        android:id="@+id/like_button_animation_in_post"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        app:layout_constraintLeft_toLeftOf="@id/post_title_in_post"
        app:layout_constraintTop_toBottomOf="@id/post_image_container_in_post">

        <ImageView
            android:id="@+id/like_button_in_post"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/heart_selector" />

    </xyz.hanks.library.bang.SmallBangView>

    <TextView
        android:id="@+id/like_count_in_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="@id/like_button_animation_in_post"
        app:layout_constraintLeft_toRightOf="@id/like_button_animation_in_post" />

    <ImageView
        android:id="@+id/comment_button_in_post"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_baseline_comment_24"
        app:layout_constraintStart_toEndOf="@id/like_count_in_post"
        app:layout_constraintTop_toBottomOf="@id/post_image_container_in_post" />

    <TextView
        android:id="@+id/post_title_in_post"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/like_button_animation_in_post" />

    <LinearLayout
        android:id="@+id/comment_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/post_title_in_post"
        tools:visibility="visible">

        <EditText
            android:id="@+id/comment_text_in_post"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:hint="@string/enter_your_comment"
            android:inputType="text" />

        <Button
            android:id="@+id/comment_out_button_in_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post"
            android:textSize="10sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/view_all_comments_in_post"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/view_all_comment_in_post_text"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/comment_linear_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>